CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
CMAKE_POLICY(SET CMP0042 OLD)

PROJECT(fp)
option(DEBUG_BUILD "debug build" OFF)
if (DEBUG_BUILD)
    SET(CMAKE_BUILD_TYPE DEBUG)
else()
    SET(CMAKE_BUILD_TYPE RELEASE)
endif()
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
INSTALL(FILES src/fp.h DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src)
