CMAKE_MINIMUM_REQUIRED(VERSION 2.8.11)
IF (POLICY CMP0042)
    CMAKE_POLICY(SET CMP0042 OLD)
ENDIF()

PROJECT(fp)
OPTION(DEBUG_BUILD "debug build" OFF)
IF (DEBUG_BUILD)
    SET(CMAKE_BUILD_TYPE DEBUG)
ELSE()
    SET(CMAKE_BUILD_TYPE RELEASE)
ENDIF()
SET(LIBRARY_OUTPUT_PATH ${CMAKE_CURRENT_SOURCE_DIR}/lib)
INSTALL(FILES src/fp.h DESTINATION ${CMAKE_CURRENT_SOURCE_DIR}/include)

ADD_SUBDIRECTORY(src)
