INCLUDE_DIRECTORIES(ss/include)
LINK_DIRECTORIES(ss/lib)

SET(FP_HEADERS fp.h)
SET(FP_SOURCES ${FP_HEADERS} fp.c)

SET(FP_EXECUTABLE fp_executable)
SET(FP_EXECUTABLE_OUTPUT fp)
ADD_EXECUTABLE(${FP_EXECUTABLE} ${FP_SOURCES})
SET_TARGET_PROPERTIES(${FP_EXECUTABLE} PROPERTIES OUTPUT_NAME ${FP_EXECUTABLE_OUTPUT})
TARGET_LINK_LIBRARIES(${FP_EXECUTABLE} ss)
