INCLUDE_DIRECTORIES(ss/include)
LINK_DIRECTORIES(ss/lib)

SET(FP_PUBLIC_HEADERS fp.h)
SET(FP_HEADERS ${FP_PUBLIC_HEADERS})
SET(FP_SOURCES ${FP_HEADERS} fp.c)

SET(FP_SHARED_LIBRARY fp_shared_library)
SET(FP_SHARED_LIBRARY_OUTPUT fp)
ADD_LIBRARY(${FP_SHARED_LIBRARY} SHARED ${FP_SOURCES})
SET_TARGET_PROPERTIES(${FP_SHARED_LIBRARY} PROPERTIES OUTPUT_NAME ${FP_SHARED_LIBRARY_OUTPUT})
TARGET_LINK_LIBRARIES(${FP_SHARED_LIBRARY} ss)

SET(FP_STATIC_LIBRARY fp_static_library)
SET(FP_STATIC_LIBRARY_OUTPUT fp)
ADD_LIBRARY(${FP_STATIC_LIBRARY} STATIC ${FP_SOURCES})
SET_TARGET_PROPERTIES(${FP_STATIC_LIBRARY} PROPERTIES OUTPUT_NAME ${FP_STATIC_LIBRARY_OUTPUT})
TARGET_LINK_LIBRARIES(${FP_STATIC_LIBRARY} ss)

SET(FP_EXECUTABLE fp_executable)
SET(FP_EXECUTABLE_OUTPUT fp)
ADD_EXECUTABLE(${FP_EXECUTABLE} ${FP_PUBLIC_HEADERS} main.c)
SET_TARGET_PROPERTIES(${FP_EXECUTABLE} PROPERTIES OUTPUT_NAME ${FP_EXECUTABLE_OUTPUT})
TARGET_LINK_LIBRARIES(${FP_EXECUTABLE} ${FP_STATIC_LIBRARY})
